--- a/views/acopon.ejs
+++ b/views/acopon.ejs
@@ -8,7 +8,7 @@
                     <div class="pos-absolute headerGradient"></div>
                 </section>
                 <!-- Intro Section -->
-                <section id="postHero" class="container-flex padding-y-100">
+                <section id="posthero" class="container-flex padding-y-100">
                     <div class="container px-5" data-aos="fade-up">
                         <h1>Branding, Identity, and Print</h1>
                         <h3>Acopon Brewing Co.</h3>
@@ -65,43 +65,22 @@
                                 <p><b>Acopon(ak’-o-pon)</b><br>
                                     A restorative, or cordial medicine or application.<br><br>
 
-                                    A local brewery I have also been fortunate enough to work with since day one. I was
-                                    approached to helped create the main brand identity for this brewery in Dripping
-                                    Springs,
-                                    Tx. The two founders are very big proponents of traditional English ales, and aimed
-                                    to
-                                    brew
-                                    these type of beers as their mainstays. Once they had the name chosen (definition
-                                    above), I
-                                    explored a variety of ideas that all had to do with health or healing. In the end we
-                                    decided
-                                    on using a Plague Doctor for their brand identity. In the times of the bubonic
-                                    plague,
-                                    most
-                                    plague doctors were simply public servants and not doctors at all. In that same
-                                    sense, a
-                                    pint of Acopon Brewing Co. beer may restore your spirit, though it's not advocated
-                                    to
-                                    actually be healthy for you, especially in excess.</p>
-
-                                <p>Apart from the over arching brand identity, which has received countless amounts of
-                                    love and
-                                    admiration from visiting patrons, the founders of Acopon Brewing Company have done
-                                    well to
-                                    continue with the theme of English and European texts, stories, and legends. With
-                                    beer names
-                                    such as Gas Pipes, named after the old street light systems used before electricity;
-                                    to beer
-                                    names such as Mina Pale Ale and Renfield IPA inspired by the characters from Bram
-                                    Stoker's
-                                    Dracula.<br><br>
-
-                                    The brewery itself is very small, so packaged beer is not really a thing, and
-                                    project are
-                                    few
-                                    and far between. Though they have seen great success based on their theme and
-                                    identity,
-                                    especially in the realm of merchandise.</p>
+                                    A small brewpub just west of Austin, TX in a town named Dripping Springs. The
+                                    founders are huge proponents of traditional English ales which is a very
+                                    underrepresented market in American craft beer. Due to this specialization, they
+                                    were looking for a brand identity that was stood out and was almost out of place for
+                                    the main market they serve.
+                                    <br><br>
+                                    With the name chosen, I explored a variety of ideas that all had to do with health
+                                    or healing including alchemy, potions, and tonics, but in the end, we decided on
+                                    using a Plague Doctor. In the times of the bubonic plague, most plague doctors were
+                                    simply public servants and not doctors at all. In that same sense, a pint of Acopon
+                                    Brewing Co. beer may restore your spirit, though it's not advocated to actually be
+                                    healthy for you, especially in excess.
+                                    <br><br>
+                                    The brand has developed into an interesting use of English & European terms, popular
+                                    tales, folklore, and fiction.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -143,11 +122,45 @@
                 <!-- Beer Logos -->
                 <!-- ADD Cask HERO -->
                 <section class="container-flex padding-y-100">
-                    <div class="container-flex cask-hero padding-top-100">
-                        <h1 class="text-light">Cask Ale Identities</h1>
+                    <div class="container-flex align-items-center cask-hero padding-top-100">
                     </div>
                     <div class="container py-5 text-center">
-                        <div class="img-medium">
+                        <h2>Cask Ale Identities</h2>
+                        <p>English ales being their main niche, it is with no surprise that Acopon
+                            Brewing Co. aims to
+                            always have beer served unfiltered, and fermented in a cask at proper cellar temperatures.
+                            We created a series of similar identities for their most popular cask beers, which are
+                            displayed directly on the cask handles, so clients can always know what casks are on tap.
+                        </p>
+                        <div class="row">
+                            <div class="col-6">
+                                <img class="img-size my-1" src="/assets/images/interior/acopon/012_GasPipes.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                            <div class="col-6">
+                                <img class="img-size my-1" src="/assets/images/interior/acopon/013_Homunculus.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                            <div class="col-6">
+                                <img class="img-size my-1" src="/assets/images/interior/acopon/014_OldPounder.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                            <div class="col-6">
+                                <img class="img-size my-1" src="/assets/images/interior/acopon/015_RotatingCask.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                            <div class="col-6">
+                                <img class="img-size my-1" src="/assets/images/interior/acopon/knickers.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                            <div class="col-6">
+                                <img class="img-size my-1" src="/assets/images/interior/acopon/whitby.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                        </div>
+
+
+                        <!-- <div class="img-medium">
                             <img class="img-size my-1" src="/assets/images/interior/acopon/012_GasPipes.png"
                                 alt="Adscend Media Homepage" data-aos="fade-up">
                         </div>
@@ -162,7 +175,7 @@
                         <div class="img-medium">
                             <img class="img-size my-1" src="/assets/images/interior/acopon/015_RotatingCask.png"
                                 alt="Adscend Media Homepage" data-aos="fade-up">
-                        </div>
+                        </div> -->
                     </div>
                 </section>
                 <!--HANS TRAPP -->
@@ -174,7 +187,7 @@
                         </div>
                     </div>
                     <div class="container-flex">
-                        <div class="container">
+                        <div class="container px-5">
                             <h2 class="text-center pt-5 pb-3">Winter Seasonal Release</h2>
                             <p>
                                 Hans Trapp was a wealthy but cruel man in the 1400’s, who was excommunicated from
@@ -235,30 +248,78 @@
                         </div>
                     </div>
                 </section>
-                <!-- CREATE HERO Rat King -->
-                <!-- <section class=" container-flex">
-                                <div class="container">
-                                    <h1>Rat King</h1>
-                                </div>
-                </section> -->
-                <!-- MERCH -->
-                <section class="container-flex padding-y-100">
-                    <div class="container text-center">
-                        <h1>Promotionals</h1>
-                        <div class="img-medium">
-                            <img class="img-size my-1" src="/assets/images/interior/acopon/010_YearOne_EventPromo.png"
-                                alt="Adscend Media Homepage" data-aos="fade-up">
+                <!-- Poledice -->
+                <section>
+                    <div class="container-flex polednice">
+                        <div class="container">
+                            <img src="/assets/images/interior/acopon/polednice_main.png" class="img-size"
+                                alt="Polednice Pilsner identity design" data-aos="fade-up" />
                         </div>
-                        <div class="img-medium">
-                            <img class="img-size my-1" src="/assets/images/interior/acopon/010_YearTWO_EventPromo.png"
-                                alt="Adscend Media Homepage" data-aos="fade-up">
+                    </div>
+                    <div class="container-flex">
+                        <h2 class="text-center pt-5 pb-3">Summer Seasonal Release</h2>
+                        <div class="container px-5">
+                            <p><a href="https://en.wikipedia.org/wiki/The_Noon_Witch" target="blank">The Noon Witch</a>
+                                (or The Noonday Witch; Czech: Polednice), Op. 108, B. 196, is a symphonic
+                                poem written in 1896 by Antonín Dvořák which was inspired by the Karel Jaromír Erben
+                                poem Polednice from the collection Kytice. Polednice is based on the noon demon "Lady
+                                Midday" of Slavic mythology.
+                                <br><br>
+                                Though this seasonal release has not been given it's own label design(yet), we wanted to
+                                create an identity design for merchandise as this beer is a big hit in the summer. The
+                                original Noon Witch synopsis being more of a tragic tale, we wanted to create a design
+                                that was more playful and welcoming, while also giving those refreshing summer vibes.
+                            <div class="row">
+                                <h2 class="text-center pt-5 pb-3">Circular Badge Identity Desgin</h2>
+                                <div class="col">
+                                    <img src="/assets/images/interior/acopon/polednice_Circle@2x.png"
+                                        alt="Polednice circular badge design" class="img-size" />
+                                </div>
+                                <div class="col">
+                                    <img src="/assets/images/interior/acopon/polednice_coaster.png"
+                                        alt="Polednice circular coaster mock up" class="img-size" />
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <img src="/assets/images/interior/acopon/polednice_shirt.png"
+                                    alt="Polednice circular t-shirt design mock up" class="img-size"
+                                    style="max-width:1130px" />
+                            </div>
+
+
+                            </p>
                         </div>
                     </div>
                 </section>
+                <!-- MERCH -->
+                <section id="promotionals" class="container-flex padding-y-100 acopon-pattern-dark">
+                    <div class="container text-center">
 
-
-
-
+                        <h2>Anniversary Promotionals</h2>
+                        <div class="row">
+                            <div class="col">
+                                <img class="img-size my-1"
+                                    src="/assets/images/interior/acopon/010_YearOne_EventPromo.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                            <div class="col">
+                                <img class="img-size my-1"
+                                    src="/assets/images/interior/acopon/010_YearTWO_EventPromo.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <img class="img-size my-1" src="/assets/images/interior/acopon/YearThree_EventPromo.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                            <div class="col">
+                                <img class="img-size my-1" src="/assets/images/interior/acopon/YearFour_EventPromo.png"
+                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
 
             <%- include('partials/get-in-touch'); %>
