--- a/public/assets/css/mediaqueries.css
+++ b/public/assets/css/mediaqueries.css
@@ -57,6 +57,29 @@
         display: block;
     }
 
+    #acopon #posthero .col {
+        flex-basis: auto;
+        padding:0 200px;
+    }
+
+    #acopon .col {
+        flex-basis: auto;
+    }
+
+    #acopon .col-6 {
+        flex-basis: content;
+    }
+
+    .color-scheme.acopon1 {
+        color: var(--acopon-light);
+        padding: 40px 0;
+    }
+
+    .color-scheme.acopon2, .color-scheme.acopon3, .color-scheme.acopon4, .color-scheme.acopon5 {
+        color: var(--text-primary);
+        padding: 40px 0;
+    }
+
 }
 
 
@@ -88,6 +111,18 @@
 
     #toggleContainer {
         height: 3700px;
+    }
+
+    #acopon #posthero .col {
+        padding: 0 50px;
+    }
+
+}
+
+
+@media only screen and (max-width: 600px) {
+    #acopon #posthero .col {
+        padding: 0;
     }
 
 }
