added max-content width class to containers

--- a/views/acopon.ejs
+++ b/views/acopon.ejs
@@ -112,7 +112,7 @@
                 </section>
                 <section>
                     <div class="container-flex crowler-content">
-                        <div class="container">
+                        <div class="container content-max">
                             <img src="/assets/images/interior/acopon/crowlers.png" class="crowler-img"
                                 alt="16oz Crowler Can Design" data-aos="fade-up" />
                             <h2 class="text-center">16oz Crowler Designs</h2>
@@ -124,7 +124,7 @@
                 <section class="container-flex padding-y-100">
                     <div class="container-flex align-items-center cask-hero padding-top-100">
                     </div>
-                    <div class="container py-5 text-center">
+                    <div class="container py-5 text-center content-max">
                         <h2>Cask Ale Identities</h2>
                         <p>English ales being their main niche, it is with no surprise that Acopon
                             Brewing Co. aims to
@@ -158,30 +158,12 @@
                                     alt="Adscend Media Homepage" data-aos="fade-up">
                             </div>
                         </div>
-
-
-                        <!-- <div class="img-medium">
-                            <img class="img-size my-1" src="/assets/images/interior/acopon/012_GasPipes.png"
-                                alt="Adscend Media Homepage" data-aos="fade-up">
-                        </div>
-                        <div class="img-medium">
-                            <img class="img-size my-1" src="/assets/images/interior/acopon/013_Homunculus.png"
-                                alt="Adscend Media Homepage" data-aos="fade-up">
-                        </div>
-                        <div class="img-medium">
-                            <img class="img-size my-1" src="/assets/images/interior/acopon/014_OldPounder.png"
-                                alt="Adscend Media Homepage" data-aos="fade-up">
-                        </div>
-                        <div class="img-medium">
-                            <img class="img-size my-1" src="/assets/images/interior/acopon/015_RotatingCask.png"
-                                alt="Adscend Media Homepage" data-aos="fade-up">
-                        </div> -->
                     </div>
                 </section>
                 <!--HANS TRAPP -->
                 <section>
                     <div class="container-flex hans">
-                        <div class="container">
+                        <div class="container content-max">
                             <img src="/assets/images/interior/acopon/hans_hero.png" class="hans-hero"
                                 alt="Hans Trap Barrel Aged Imperial Stout" data-aos="fade-up">
                         </div>
@@ -258,7 +240,7 @@
                     </div>
                     <div class="container-flex">
                         <h2 class="text-center pt-5 pb-3">Summer Seasonal Release</h2>
-                        <div class="container px-5">
+                        <div class="container px-5 content-max">
                             <p><a href="https://en.wikipedia.org/wiki/The_Noon_Witch" target="blank">The Noon Witch</a>
                                 (or The Noonday Witch; Czech: Polednice), Op. 108, B. 196, is a symphonic
                                 poem written in 1896 by Antonín Dvořák which was inspired by the Karel Jaromír Erben
@@ -270,7 +252,7 @@
                                 original Noon Witch synopsis being more of a tragic tale, we wanted to create a design
                                 that was more playful and welcoming, while also giving those refreshing summer vibes.
                             <div class="row">
-                                <h2 class="text-center pt-5 pb-3">Circular Badge Identity Desgin</h2>
+                                <h2 class="text-center pt-5 pb-3">Circular Badge Identity Design</h2>
                                 <div class="col">
                                     <img src="/assets/images/interior/acopon/polednice_Circle@2x.png"
                                         alt="Polednice circular badge design" class="img-size" />
@@ -293,7 +275,7 @@
                 </section>
                 <!-- MERCH -->
                 <section id="promotionals" class="container-flex padding-y-100 acopon-pattern-dark">
-                    <div class="container text-center">
+                    <div class="container text-center content-max">
 
                         <h2>Anniversary Promotionals</h2>
                         <div class="row">
