rearranged order of design projects

--- a/views/partials/design-portfolio.ejs
+++ b/views/partials/design-portfolio.ejs
@@ -12,6 +12,32 @@
         </div>
     </div>
     <div class="card card-overwrite" data-aos="fade-up">
+        <img src=" /assets/images/home/007_acopon.png" class="card-img-top"
+            alt="Cover image for Acopon Brewing Co. Branding Project">
+        <div class="card-body">
+            <p class="card-text">Branding & Print Design
+            </p>
+            <h5 class="card-title">Designing an unexpected brand in a small but evolving town
+            </h5>
+            <div class="viewMoreDiv">
+                <a href="design/acopon"><button class="btn text-light BtnStyles">View Project</button></a>
+            </div>
+        </div>
+    </div>
+    <div class="card card-overwrite" data-aos="fade-up">
+        <img src=" /assets/images/home/005_azw.png" class="card-img-top"
+            alt="Cover image of illustration / labels for AZ Wilderness Brewing Co.">
+        <div class="card-body">
+            <p class="card-text">Illustration & Print Design
+            </p>
+            <h5 class="card-title">A collection of product labels and promotional illustrations
+            </h5>
+            <div class="viewMoreDiv">
+                <a href="design/azw-illustration"><button class="btn text-light BtnStyles">View Project</button></a>
+            </div>
+        </div>
+    </div>
+    <div class="card card-overwrite" data-aos="fade-up">
         <img src=" /assets/images/home/002_hideout.png" class="card-img-top" alt="Cover image of Hideout.tv Project">
         <div class="card-body">
             <p class="card-text">Product Design
@@ -23,41 +49,15 @@
         </div>
     </div>
     <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/003_adscend.png" class="card-img-top"
-            alt="Cover image of Adscend Media Products">
-        <div class="card-body">
-            <p class="card-text">UI Design
-            </p>
-            <h5 class="card-title">Redesigning the Client Experience + Launching A New Monetization Product
-            </h5>
-            <div class="viewMoreDiv">
-                <a href="design/adscend-ui"><button class="btn text-light BtnStyles">View Project</button></a>
-            </div>
-        </div>
-    </div>
-    <div class="card card-overwrite" data-aos="fade-up">
         <img src=" /assets/images/home/004_azw.png" class="card-img-top"
             alt="Cover image of Logo Projects for AZ Wilderness Brewin Co.">
         <div class="card-body">
             <p class="card-text">Idendity / Logo Design
             </p>
-            <h5 class="card-title">Logofolio | A Collection of Identity Designs
+            <h5 class="card-title">A collection of identity designs in the craft beer industry
             </h5>
             <div class="viewMoreDiv">
                 <a href="design/azw-logos"><button class="btn text-light BtnStyles">View Project</button></a>
-            </div>
-        </div>
-    </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/005_azw.png" class="card-img-top"
-            alt="Cover image of illustration / labels for AZ Wilderness Brewing Co.">
-        <div class="card-body">
-            <p class="card-text">Illustration & Print Design
-            </p>
-            <h5 class="card-title">Creating a Narrative Through Illustration
-            </h5>
-            <div class="viewMoreDiv">
-                <a href="design/azw-illustration"><button class="btn text-light BtnStyles">View Project</button></a>
             </div>
         </div>
     </div>
@@ -67,23 +67,10 @@
         <div class="card-body">
             <p class="card-text">Branding & Web Design
             </p>
-            <h5 class="card-title">Rebranding and Repositioning a Company in Transition
+            <h5 class="card-title">Rebranding, repositioning, and launching new products for a company in a market shift
             </h5>
             <div class="viewMoreDiv">
                 <a href="design/adscendmedia"><button class="btn text-light BtnStyles">View Project</button></a>
-            </div>
-        </div>
-    </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/007_acopon.png" class="card-img-top"
-            alt="Cover image for Acopon Brewing Co. Branding Project">
-        <div class="card-body">
-            <p class="card-text">Branding & Print Design
-            </p>
-            <h5 class="card-title">Designing an Unexpected Brand in a Small Town
-            </h5>
-            <div class="viewMoreDiv">
-                <a href="design/acopon"><button class="btn text-light BtnStyles">View Project</button></a>
             </div>
         </div>
     </div>
