--- a/views/partials/design-portfolio.ejs
+++ b/views/partials/design-portfolio.ejs
@@ -75,3 +75,17 @@
         </div>
     </div>
 </div>
+<!-- <div class="container py5 prj-placeholder invisible">
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+</div> -->
