--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,25 @@
             <div id="toggleContainer" class="container">
                 <%- include('partials/design-portfolio'); %>
                     <%- include('partials/dev-portfolio'); %>
+                        <!-- Empty Spacers -->
+                        <div class="container py5 prj-placeholder invisible">
+                            <div class="card card-overwrite">
+                            </div>
+                            <div class="card card-overwrite">
+                            </div>
+                            <div class="card card-overwrite">
+                            </div>
+                            <div class="card card-overwrite">
+                            </div>
+                            <div class="card card-overwrite">
+                            </div>
+                            <div class="card card-overwrite">
+                            </div>
+                            <div id="extras" class="card card-overwrite d-none" card-data="extra">
+                            </div>
+                            <div id="extras" class="card card-overwrite d-none" card-data="extra">
+                            </div>
+                        </div>
             </div>
         </div>
     </main>
