--- a/views/partials/dev-portfolio.ejs
+++ b/views/partials/dev-portfolio.ejs
@@ -131,3 +131,23 @@
         </div>
     </div>
 </div>
+<!-- <div class="container py5 prj-placeholder invisible">
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+    <div class="card card-overwrite">
+    </div>
+</div> -->
