finished illustration page with new images and some updated JS logic

--- a/views/azw-illustration.ejs
+++ b/views/azw-illustration.ejs
@@ -13,7 +13,7 @@
                         </div>
                     </div>
                 </div>
-                <section id="postHero" class="container-flex padding-y-100">
+                <section id="postHero" class="container-flex pt-5">
                     <div class="container" data-aos="fade-up">
                         <h1>Illustration & Print Design</h1>
                         <h3>Arizona Wilderness Brewing Co.</h3>
@@ -44,21 +44,29 @@
                                 </div>
                             </div>
                             <div class="col-md-9">
-                                <p>As mentioned in the other Arizona Widlerness project, one of the greatest benfitis of
-                                    not
-                                    widely distributing your beer is the additional leeway you have for your product
-                                    labels.
-                                    The approach taken with a lot of products and events was always to create something
-                                    unique and with it’s own identity. For a lot of special releases, I was able to take
-                                    a
-                                    much more illustrative approach. Below is a small collection of some of my favorite
-                                    labels and promotionals over the years.</p>
+                                <p>
+                                    One of the perks of being a brew-pub and not widely distributing your beer, is you
+                                    gain flexibility in your product label artwork. Below are some of my favorite labels
+                                    that I have created for Arizona Wilderness Brewing Co. over the years.
+                                    <br><br>
+                                    My approach was always to try and create an identity for each product that could
+                                    stand on its own, then include a more complex illustration for the entire label.
+                                    <br><br>
+                                    For all my illustration work, I primarily work with vector graphics in Adobe
+                                    Illustrator(Desktop and iPad) but may occasionally bring the artwork into Adobe
+                                    Photoshop for effects and final touches.
+                                    <br>
+                                    <br>
+                                    <span class="note"><strong>Note:</strong> This page is image intensive. Fast
+                                        internet connection and viewing on a desktop is recommended.
+                                    </span>
+                                </p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section class="container-flex padding-y-100">
-                    <div id="vectors" class="container-flex">
+                <section class="container-flex flex-column">
+                    <div id="vectors" class="container-flex justify-content-center">
                     </div>
                 </section>
             </main>
