--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -323,6 +323,14 @@ background:#a53434;
     cursor: pointer;
 }
 
+.note {
+    background: rgba(232,58,14,.1);
+    padding: 10px 10px;
+    border: 1px solid var(--rojo-primary);
+    border-radius: 5px;
+    font-size:14px;
+}
+
 
 #azwBranding h3, #adscend h3, #logofolio h3, #illustration h3, #adscend h3, #acopon h3  {
     text-align:center;
@@ -448,7 +456,23 @@ margin: 0 auto;
 /* ================================= */
 
 .illustration-hero {
-    background: url('/assets/images/interior/azw-illustration/illustration_1920.png') center/cover no-repeat fixed;
+    background: url('/assets/images/interior/illustrations/screaming_bg.png') center/cover no-repeat fixed;
+}
+
+.bg-images {
+    max-height: 920px;
+    height: 920px;
+    background-size: cover;
+}
+
+.excerpt {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    font-size: 12px;
+    color: white;
+    max-width: 250px;
+    line-height: 16px;
 }
 
 /* Adscend*/
