--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,7 +6,8 @@
                 <!-- Intro Section -->
                 <section id="postHero" class="container-flex padding-top-200">
                     <div class="container" data-aos="fade-up">
-                        <h1>Hello, I'm David Rojo. A designer, illustrator and full-stack developer based in Austin,
+                        <h1>Hello, I'm David Rojo. A multi-disciplanry designer, illustrator and full-stack developer
+                            based in Austin,
                             Texas.
                         </h1>
                     </div>
@@ -38,13 +39,18 @@
                                     to
                                     also be a facilitator for everyone involved.<br><br>
 
-                                    Currently I am working as a freelance Designer & Art Director with an emphasis in
+                                    Currently I am employed full-time as a Web and UI Designer with <a href="bevy.com"
+                                        target="_blank">Bevy</a>, and I continue to freelance in my spare time with an
+                                    emphasis in
                                     the
-                                    craft beer industry. The grand majority of my projects are from repeat clients, some
+                                    craft beer industry. The majority of my freelance projects are from repeat clients,
+                                    some
                                     of
-                                    which I have been working with for close to a decade. I also recently completed a
-                                    full-stack web development bootcamp offered through UT Austin, and am looking to
-                                    gain more experience in web development.<br><br>
+                                    which I have been working with for close to a decade. In March of 2021, I completed
+                                    a
+                                    full-stack web development bootcamp offered through UT Austin, and am currently
+                                    mostly interested in expanding my knowledge and experience in front-end
+                                    development..<br><br>
 
                                     Outside of designing and coding, you can catch me creating music which is probably
                                     not fit for
