--- a/views/design.ejs
+++ b/views/design.ejs
@@ -23,7 +23,7 @@
                             <img src=" /assets/images/home/001_azw.png" class="card-img-top"
                                 alt="Cover image of AZ Wilderness Brewing Co. Project">
                             <div class="card-body">
-                                <p class="card-text">Branding / Print Design</p>
+                                <p class="card-text">Branding & Print Design</p>
                                 <h5 class="card-title">Establishing one of the first breweries to break the mold in
                                     Arizona</h5>
                                 <div class="viewMoreDiv">
@@ -91,7 +91,7 @@
                             <img src=" /assets/images/home/006_adscend.png" class="card-img-top"
                                 alt="Cover image of Adscend Media Branding and Web Design">
                             <div class="card-body">
-                                <p class="card-text">Branding & Web Design
+                                <p class="card-text">Branding, Web, & Product(UI/UX) design
                                 </p>
                                 <h5 class="card-title">Rebranding, repositioning, and launching new products for a
                                     company in a market shift
