--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,7 @@
         <div id="intro-content" class="container">
             <div class="py-3 logo"><img src="/assets/images/logo/rr_logo_white.svg" class="text-light"></div>
             <div>
-                <h1>David Rojo is a multidiscplinary designer, illustrator
-                    and full-stack developer.
+                <h1>Design, illustration, and full-stack web development.
                 </h1>
             </div>
             <div>
