--- a/views/partials/design-portfolio.ejs
+++ b/views/partials/design-portfolio.ejs
@@ -4,7 +4,7 @@
         <img src=" /assets/images/home/001_azw.png" class="card-img-top"
             alt="Cover image of AZ Wilderness Brewing Co. Project">
         <div class="card-body">
-            <p class="card-text">Branding / Print Design</p>
+            <p class="card-text">Branding & Print Design</p>
             <h5 class="card-title">Establishing one of the first breweries to break the mold in Arizona</h5>
             <div class="viewMoreDiv">
                 <a href="design/azw-branding"><button class="btn text-light BtnStyles">View Project</button></a>
@@ -40,7 +40,7 @@
     <div class="card card-overwrite" data-aos="fade-up">
         <img src=" /assets/images/home/002_hideout.png" class="card-img-top" alt="Cover image of Hideout.tv Project">
         <div class="card-body">
-            <p class="card-text">Product Design
+            <p class="card-text">Product(UI/UX) Design
             </p>
             <h5 class="card-title">Launching An Industry First Rewarded Video Platform</h5>
             <div class="viewMoreDiv">
@@ -65,7 +65,7 @@
         <img src=" /assets/images/home/006_adscend.png" class="card-img-top"
             alt="Cover image of Adscend Media Branding and Web Design">
         <div class="card-body">
-            <p class="card-text">Branding & Web Design
+            <p class="card-text">Branding, Web, & Product(UI/UX) design
             </p>
             <h5 class="card-title">Rebranding, repositioning, and launching new products for a company in a market shift
             </h5>
