additionl text and padding fixes

--- a/views/acopon.ejs
+++ b/views/acopon.ejs
@@ -8,7 +8,7 @@
                     <div class="pos-absolute headerGradient"></div>
                 </section>
                 <!-- Intro Section -->
-                <section id="posthero" class="container-flex padding-y-100">
+                <section id="posthero" class="container-flex pt-5">
                     <div class="container px-5" data-aos="fade-up">
                         <h1>Branding, Identity, and Print</h1>
                         <h3>Acopon Brewing Co.</h3>
@@ -65,11 +65,12 @@
                                 <p><b>Acopon(ak’-o-pon)</b><br>
                                     A restorative, or cordial medicine or application.<br><br>
 
-                                    A small brewpub just west of Austin, TX in a town named Dripping Springs. The
+                                    A small brewpub just west of Austin, TX in a town named Dripping Springs that is
+                                    ever growing and evolving. The
                                     founders are huge proponents of traditional English ales which is a very
                                     underrepresented market in American craft beer. Due to this specialization, they
-                                    were looking for a brand identity that was stood out and was almost out of place for
-                                    the main market they serve.
+                                    were looking for a brand identity that was stood out within the main market they
+                                    serve.
                                     <br><br>
                                     With the name chosen, I explored a variety of ideas that all had to do with health
                                     or healing including alchemy, potions, and tonics, but in the end, we decided on
@@ -86,7 +87,7 @@
                     </div>
                 </section>
                 <!-- Colors and Patterns -->
-                <section class="container-flex">
+                <section class="container-flex padding-top-100">
                     <h2 class="text-center" data-aos="fade-up">Color Scheme</h2>
                     <div class="row" data-aos="fade-up">
                         <div class="col color-scheme acopon1">
@@ -124,7 +125,7 @@
                 <section class="container-flex padding-y-100">
                     <div class="container-flex align-items-center cask-hero padding-top-100">
                     </div>
-                    <div class="container py-5 text-center content-max">
+                    <div class="container text-center content-max padding-top-100">
                         <h2>Cask Ale Identities</h2>
                         <p>English ales being their main niche, it is with no surprise that Acopon
                             Brewing Co. aims to
@@ -170,7 +171,7 @@
                     </div>
                     <div class="container-flex">
                         <div class="container px-5">
-                            <h2 class="text-center pt-5 pb-3">Winter Seasonal Release</h2>
+                            <h2 class="text-center pb-3 padding-top-100">Winter Seasonal Release</h2>
                             <p>
                                 Hans Trapp was a wealthy but cruel man in the 1400’s, who was excommunicated from
                                 the
@@ -189,7 +190,7 @@
                                 Hans
                                 Trapp.
                             </p>
-                            <h2 class="text-center pt-5 pb-3">Identity Design</h2>
+                            <h2 class="text-center pb-3 padding-top-100">Identity Design</h2>
                             <div class="row">
                                 <div class="col">
                                     <img src="/assets/images/interior/acopon/HansTrapp_1Color@2x.png"
@@ -200,12 +201,12 @@
                                         alt="Hans Trapp identity design, 1 color" class="img-size" data-aos="fade-up" />
                                 </div>
                             </div>
-                            <h2 class="text-center  pt-5 pb-3">16oz Can Label Design</h2>
+                            <h2 class="text-center pb-3 padding-top-100">16oz Can Label Design</h2>
                             <div class="row justify-content-center">
                                 <img src="/assets/images/interior/acopon/hans_label.png"
                                     alt="Hans Trapp 16oz can label design" class="hans-label" data-aos="fade-up" />
                             </div>
-                            <h2 class="text-center  pt-5 pb-3">Merch</h2>
+                            <h2 class="text-center pb-3 padding-top-100">Merch</h2>
                             <div class="row">
                                 <div class="col-6">
                                     <img src="/assets/images/interior/acopon/HansTrapp_red_Front@2x.png"
