--- a/views/azw-branding.ejs
+++ b/views/azw-branding.ejs
@@ -11,7 +11,7 @@
                             data-aos="fade-up">
                     </div>
                 </div>
-                <div id="postHero" class="container-flex padding-y-100">
+                <div id="postHero" class="container-flex pt-5">
                     <div class="container px-5" data-aos="fade-up">
                         <h1>Branding and Print Design</h1>
                         <h3>Arizona Wilderness Brewing Co.</h3>
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <!-- Hospitality Touchpoints -->
-                <div class="container-flex bg-white adding-y-100">
+                <div class="container-flex bg-white padding-top-100">
                     <div class="container px-5 max-w-995">
                         <h1>Hospitality Touch Points</h1>
                         <img src="/assets/images/interior/azw-branding/menu_gilbert.png"
@@ -322,7 +322,7 @@
                                 data-aos="fade-up" class="can-image">
                         </div>
                     </div>
-                    <div class="container-flex padding-y-200">
+                    <div class="container-flex padding-top-200">
                         <h1>Merch</h1>
                         <img src="/assets/images/interior/azw-branding/shirt001.png" alt="Refuge IPA" class="img-size"
                             data-aos="fade-up">
