--- a/views/azw-logos.ejs
+++ b/views/azw-logos.ejs
@@ -45,14 +45,20 @@
                                 </div>
                             </div>
                             <div class="col-md-9">
-                                <p>From the start it was decided that each beer could be treated as having it’s own
-                                    identity and story. By my estimation, I have designed over 200 different identities
-                                    and
-                                    labels in packaged format for Arizona Wilderness Brewing Co. The goal was always to
-                                    create an individual logo design for each beer that can be translated into
-                                    merchandise
-                                    or individual promotion. Below is a small collection of some of my absolute favorite
-                                    designs over the years.</p>
+                                <p>Before this brewpub even began packaging their beer, we already new we wanted to
+                                    create individual stories and brands for as many of their individual products as
+                                    possible. This allowed the small brewpub to not only better promote their products,
+                                    but also gave them greater touch points for merchandising, which can be a huge
+                                    revenue driver for breweries.
+                                    <br><br>
+                                    By my estimation, I have designed over 200 different identities and labels in
+                                    packaged format for Arizona Wilderness Brewing Co. The brewers typically send me a
+                                    name and a concept for each beer, and I work to translate their vision both in
+                                    identity and label design, making suggestion for improvements along the way. Below
+                                    is a
+                                    small
+                                    collection of some of my favorite designs over the years.
+                                </p>
                             </div>
                         </div>
                     </div>
