text edits, and some JS for the intro I was playing around with

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,10 +6,8 @@
                 <!-- Intro Section -->
                 <section id="postHero" class="container-flex padding-top-200">
                     <div class="container" data-aos="fade-up">
-                        <h1>Hello, I'm David Rojo. A multi-disciplanry designer, illustrator and full-stack developer
-                            based in Austin,
-                            Texas.
-                        </h1>
+                        <h1>Howdy, I'm David Rojo.</h1>
+                        <h2 class="text-center">I love to design and build unique brands and digital products.</h2>
                     </div>
                     <div class="container p-5">
                         <div class="row">
