--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <div id="intro-content" class="container">
             <div class="py-3 logo"><img src="/assets/images/logo/rr_logo_white.svg" class="text-light"></div>
             <div>
-                <h1>Design, illustration, and full-stack web development.
+                <h1>David Rojo is a multi-disciplinary designer, illustrator, and full-stack web developer.
                 </h1>
             </div>
             <div>
